; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_app.c_register_ip_vs_app_inc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_app.c_register_ip_vs_app_inc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_app = type { i32 }

@__ip_vs_app_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @register_ip_vs_app_inc(%struct.ip_vs_app* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ip_vs_app*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ip_vs_app* %0, %struct.ip_vs_app** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 @mutex_lock(i32* @__ip_vs_app_mutex)
  %9 = load %struct.ip_vs_app*, %struct.ip_vs_app** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @ip_vs_app_inc_new(%struct.ip_vs_app* %9, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = call i32 @mutex_unlock(i32* @__ip_vs_app_mutex)
  %14 = load i32, i32* %7, align 4
  ret i32 %14
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @ip_vs_app_inc_new(%struct.ip_vs_app*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
